--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,21 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.byprogminer</groupId>
-    <artifactId>Lab3_Web</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>Lab_Web</artifactId>
+    <version>3.0-SNAPSHOT</version>
     <packaging>war</packaging>
+
+    <properties>
+        <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
+    </properties>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -23,6 +29,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.3</version>
             </plugin>
         </plugins>
     </build>
