--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
 
     <modules>
         <module>backend</module>
-        <module>backend-web</module>
-        <module>backend-ear</module>
+        <module>war</module>
+        <module>ear</module>
         <module>area-test</module>
     </modules>
 
@@ -36,7 +36,7 @@
 
             <dependency>
                 <groupId>ru.byprogminer.Lab4_Web</groupId>
-                <artifactId>backend-web</artifactId>
+                <artifactId>war</artifactId>
                 <version>1.0-SNAPSHOT</version>
                 <type>war</type>
             </dependency>
