--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -15,6 +15,26 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>ear</packaging>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-ear-plugin</artifactId>
+                <version>2.8</version>
+
+                <configuration>
+                    <modules>
+                        <webModule>
+                            <groupId>ru.byprogminer.Lab4_Web</groupId>
+                            <artifactId>war</artifactId>
+                            <context-root>/</context-root>
+                        </webModule>
+                    </modules>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>ru.byprogminer.Lab4_Web</groupId>
