--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -27,5 +27,12 @@
             <version>2.0.1.Final</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.4.Final</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
