--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,8 @@
     "devDependencies": {
         "@types/react-redux": "^7.1.5",
         "@types/react-router-dom": "^5.1.3",
+        "autoprefixer": "^9.7.3",
+        "cross-env": "^6.0.3",
         "redux-devtools": "^3.5.0"
     }
 }
