--- a/build.xml
+++ b/build.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="Lab3_OPI" default="compile">
 
+    <property file="build.properties" />
+
     <path id="libraries">
-        <fileset dir="libs" includes="**/*.jar" />
+        <fileset dir="${libraries.path}" includes="**/*.jar" />
     </path>
 
-    <target name="compile">
-        <mkdir dir="target/classes" />
+    <target name="clean">
+        <delete dir="${build.path}" />
+    </target>
 
-        <copy todir="target/classes">
-            <fileset dir="src/main/resources" excludes="**/*.java" />
+    <target name="compile">
+        <mkdir dir="${build.path}/classes" />
+
+        <copy todir="${build.path}/classes">
+            <fileset dir="${resources.path}" excludes="**/*.java" />
         </copy>
 
-        <javac destdir="target/classes" includeantruntime="false" classpathref="libraries">
-            <src path="src/main/java" />
+        <javac destdir="${build.path}/classes" includeantruntime="false" classpathref="libraries">
+            <src path="${sources.path}" />
         </javac>
     </target>
 </project>
