Fix project structure. Add build target

--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,18 @@
 
+# Project
+
+project.version = 3.0-SNAPSHOT
+main.class = ru.byprogminer.Lab3_Web.AreaTest
+
+# Build
+
+ant.build.javac.source = 1.8
+ant.build.javac.target = 1.8
+
 # Paths
 
-libraries.path = libs
+libraries.compile.path = lib/compile
+libraries.provided.path = lib/provided
 sources.path = src/main/java
 resources.path = src/main/resources
 web.path = src/main/webapp
