Add scp task and draft for another tasks

--- a/build.properties
+++ b/build.properties
@@ -11,10 +11,18 @@ ant.build.javac.target = 1.8
 
 # Paths
 
+libraries.ant.path = lib/ant
 libraries.compile.path = lib/compile
 libraries.provided.path = lib/provided
+libraries.test.path = lib/test
 sources.path = src/main/java
+sources.test.path = src/test/java
 resources.path = src/main/resources
+resources.test.path = src/test/resources
 web.path = src/main/webapp
 build.path = target
 
+# Deployment
+
+remote.hostname = se.ifmo.ru
+remote.port = 2222
