Implement test and partially report targets. Add some tests

--- a/build.properties
+++ b/build.properties
@@ -21,6 +21,7 @@ resources.path = src/main/resources
 resources.test.path = src/test/resources
 web.path = src/main/webapp
 build.path = target
+report.path = report
 
 # Deployment
 
