Finish tests. Add "pismak" target. Update test report

--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,7 @@
 # Project
 
 project.version = 3.0-SNAPSHOT
-main.class = ru.byprogminer.Lab3_Web.AreaTest
+main.class = ru.byprogminer.Lab3_Web.AreaRenderer
 
 # Build
 
